GM-10: fixed input issues, added visibility icon for password field

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,10 +6,15 @@ a:visited{
     color: inherit;
 }
 
-
 .form{
     display: flex;
     flex-direction: column;
     width: 40%;
     align-items: center;
+}
+
+#loginVisibilityIcon{
+    top: -46.5%;
+    width: 40px;
+    align-self: end;
 }
